--- a/.github/workflows/cd-docker-hub.yml
+++ b/.github/workflows/cd-docker-hub.yml
@@ -16,8 +16,6 @@ on:
     types: [ published ]
 
 env:
-  REGISTRY: ajustesen
-  IMAGE_NAME: ${{ github.repository }}
   PLATFORMS: linux/amd64,linux/arm64,linux/arm/v7
 
 jobs:
@@ -47,7 +45,7 @@ jobs:
         id: meta
         uses: docker/metadata-action@v4
         with:
-          images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
+          images: ${{ secrets.DOCKER_USERNAME }}/${{ github.repository }}
 
       - name: Build and push image to Docker Hub
         uses: docker/build-push-action@v3
