--- a/.github/workflows/cd-docker-hub.yml
+++ b/.github/workflows/cd-docker-hub.yml
@@ -38,11 +38,15 @@ jobs:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
 
+      - id: docker-image-to-lowercase
+        name: Convert Docker image to lower case
+        run: echo "DOCKER_IMAGE=$(echo ${{ secrets.DOCKER_USERNAME }}/${{ github.repository }} | tr '[:upper:]' '[:lower:]')" >> $GITHUB_ENV
+
       - name: Extract metadata (tags, labels) for Docker
         id: meta
         uses: docker/metadata-action@v4
         with:
-          images: ${{ secrets.DOCKER_USERNAME }}/${{ github.repository }}
+          images: ${{ env.DOCKER_IMAGE }}
 
       - name: Build and push image to Docker Hub
         uses: docker/build-push-action@v3
@@ -50,5 +54,5 @@ jobs:
           context: .
           push: true
           platforms: ${{ env.PLATFORMS }}
-          tags: ${{ secrets.DOCKER_USERNAME }}/${{ github.repository }}:latest
+          tags: ${{ env.DOCKER_IMAGE }}:latest
           labels: ${{ steps.meta.outputs.labels }}
